// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> snapshot should match snapshot 1`] = `
<div>
  <div
    class="md-slider-wrapper"
    role="group"
  >
    <div
      class="md-slider-track"
      style="--local-value: 20%;"
    >
      <div
        class="md-slider-thumb"
      >
        <div
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            aria-labelledby="test-ID"
            aria-valuetext="2"
            id="test-ID"
            max="10"
            min="0"
            step="1"
            tabindex="0"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Slider /> snapshot should match snapshot with ariaLabel 1`] = `
<div>
  <div
    aria-label="test aria label"
    class="md-slider-wrapper"
    role="group"
  >
    <div
      class="md-slider-track"
      style="--local-value: 20%;"
    >
      <div
        class="md-slider-thumb"
      >
        <div
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            aria-label="test aria label"
            aria-labelledby="test-ID"
            aria-valuetext="2"
            id="test-ID"
            max="10"
            min="0"
            step="1"
            tabindex="0"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Slider /> snapshot should match snapshot with className 1`] = `
<div>
  <div
    class="example-class md-slider-wrapper"
    role="group"
  >
    <div
      class="md-slider-track"
      style="--local-value: 20%;"
    >
      <div
        class="md-slider-thumb"
      >
        <div
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            aria-labelledby="test-ID"
            aria-valuetext="2"
            id="test-ID"
            max="10"
            min="0"
            step="1"
            tabindex="0"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Slider /> snapshot should match snapshot with id 1`] = `
<div>
  <div
    class="md-slider-wrapper"
    id="example-id"
    role="group"
  >
    <div
      class="md-slider-track"
      style="--local-value: 20%;"
    >
      <div
        class="md-slider-thumb"
      >
        <div
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            aria-labelledby="test-ID"
            aria-valuetext="2"
            id="test-ID"
            max="10"
            min="0"
            step="1"
            tabindex="0"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Slider /> snapshot should match snapshot with style 1`] = `
<div>
  <div
    class="md-slider-wrapper"
    role="group"
    style="color: pink;"
  >
    <div
      class="md-slider-track"
      style="--local-value: 20%;"
    >
      <div
        class="md-slider-thumb"
      >
        <div
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            aria-labelledby="test-ID"
            aria-valuetext="2"
            id="test-ID"
            max="10"
            min="0"
            step="1"
            tabindex="0"
            type="range"
            value="2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
